apps/authentik/authentik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authentik-auth
  namespace: authentik
spec:
  forwardAuth:
    address: "https://auth.denniscloud.io"
    trustForwardHeader: true
    authResponseHeaders:
    - "X-Authenticated-User"
