apps/authentik/authentik-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-server
  template:
    metadata:
      labels:
        app: authentik-server
        app.kubernetes.io/name: authentik-server
    spec:
      containers:
      - name: server
        image: ghcr.io/goauthentik/server:2024.12.1
        command: ["server"]
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /templates
          name: custom-templates
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      - name: custom-templates
        emptyDir: {}
