apps/authentik/authentik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: authentik
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app: authentik-server
