apps/authentik/authentik-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingressroute
  namespace: authentik
  annotations:
    gethomepage.dev/href: "https://auth.denniscloud.io"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Block Storage
    gethomepage.dev/group: Services
    gethomepage.dev/icon: authentik.png
    gethomepage.dev/app: authentik-server
    gethomepage.dev/name: Authentik
    gethomepage.dev/widget.type: "authentik"
    gethomepage.dev/widget.url: "https://auth.denniscloud.io"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.denniscloud.io`)
      kind: Rule
      services:
        - name: authentik-server
          port: 9000
  tls:
    secretName: authentik-cert-secret
